[backport] Disable aggressive+verification test configs (jtreg eats up last configuration)