@@ -35,9 +35,6 @@
  * @run main/othervm -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=dynamic    -Xmx64m -Xms64m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify StringInternCleanup
  * @run main/othervm -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=adaptive   -Xmx64m -Xms64m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify StringInternCleanup
  * @run main/othervm -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=passive    -Xmx64m -Xms64m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify StringInternCleanup
- *
- * Skip, this runs for too long with back-to-back GCs and verification:
- *  run main/othervm -Xlog:gc -Xlog:gc+stringtable -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive -Xmx64m -Xms64m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify StringInternCleanup
  */
 
 public class StringInternCleanup {
